--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <html>
-	<body>
+	<body style="margin: 0;padding: 0;">
         <div id="content"></div>
         <script src="/src/index.js"></script>
     </body>
